<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="36dp"
    android:paddingEnd="36dp"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins"
        android:text="@string/slogan_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email_text"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slogan" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edt_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edt"
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/email_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pass_text"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edt_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edt_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_pass"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:hint="@string/pass_text"
            android:imeOptions="actionSend"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/sign_in_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edt_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button">

        <TextView
            android:id="@+id/ask_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/dont_have"
            android:textSize="10sp" />

        <View
            android:layout_width="5dp"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up_text"
            android:textColor="#357458"
            android:textSize="10sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
