<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    android:layout_marginLeft="36dp"
    android:layout_marginRight="36dp"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan_text"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_email_address"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="76dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slogan" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_edt_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:textSize="13sp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edt_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_edt_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullname_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:hint="@string/fullname_hint"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Provincial Location"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullname_edt_layout" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/provinces_edt_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_province"
            app:endIconMode="dropdown_menu"
            app:endIconDrawable="@drawable/baseline_arrow_drop_down_24">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/provinces_edt"
                android:padding="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                android:text="@string/choose_label"/>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass_text"
            android:fontFamily="@font/poppins"
            android:textSize="13sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/provinces_edt_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_edt_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_pass"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:fontFamily="@font/poppins"
                android:hint="@string/pass_text"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/sign_up_text"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="37dp"
            android:background="@drawable/button_bg"
            app:layout_constraintTop_toBottomOf="@+id/pass_edt_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_button">

            <TextView
                android:id="@+id/ask_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have"
                android:fontFamily="@font/poppins"
                android:textSize="10sp"/>

            <View
                android:layout_width="5dp"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/tv_signin"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_text"
                android:fontFamily="@font/poppins_medium"
                android:textSize="10sp"
                android:textColor="#357458" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>