<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.intro.MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/view_bg"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:elevation="5dp"
        android:src="@drawable/leaf"
        app:layout_constraintBottom_toBottomOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/leafdoctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/home_slogan"
        android:fontFamily="@font/poppins"
        android:textSize="12sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/started_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/button_bg"
        android:text="@string/get_started_btn"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/quest" />

    <LinearLayout
        android:id="@+id/quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/ask_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have"
            android:fontFamily="@font/poppins"
            android:textSize="10sp"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="705dp"/>

        <View
            android:layout_width="5dp"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/tv_signup"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_medium"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_text"
            android:textColor="#357458" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>