<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Profile"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="#4F8929"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:elevation="5dp"
        android:src="@drawable/leaf"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile" />

    <TextView
        android:id="@+id/fullname_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Full name"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="#B7E583"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"/>

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/fullname_hint"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/fullname_txt"/>

    <View
        android:id="@+id/line1"
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="14dp"
        android:visibility="visible"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fullname"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/email_text"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="#B7E583"
        app:layout_constraintTop_toBottomOf="@+id/line1"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email_hint"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"/>

    <View
        android:id="@+id/line2"
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="17dp"
        android:visibility="visible"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"/>

    <TextView
        android:id="@+id/location_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/location_txt"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="#B7E583"
        app:layout_constraintTop_toBottomOf="@+id/line2"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/location"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/location_txt"/>

    <View
        android:id="@+id/line3"
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="17dp"
        android:visibility="visible"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"/>

</androidx.constraintlayout.widget.ConstraintLayout>