<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendationActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="centerCrop"
        android:src="@drawable/image"
        android:adjustViewBounds="true"
        app:shapeAppearance="@style/CornerCut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jenis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/jenis_bg"
        android:fontFamily="@font/poppins"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:text="Tomat"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Disease Detection:"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/disease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/disease_context"
        android:textColor="@color/red"
        android:layout_marginLeft="30dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_disease" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:src="@drawable/star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disease" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/treatment_recommendations"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/disease" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:fontFamily="@font/poppins"
        android:justificationMode="inter_word"
        android:text="@string/content_text"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>